[gd_scene load_steps=13 format=3 uid="uid://chqvop78alemk"]

[ext_resource type="Theme" uid="uid://cbp0x2v5m6a5b" path="res://textures/ui.tres" id="1_5p8wc"]
[ext_resource type="Script" uid="uid://dopgnifo2k0wh" path="res://scripts/settings.gd" id="1_f4mfi"]
[ext_resource type="Texture2D" uid="uid://dsi32t8owkwtl" path="res://textures/volume-off.png" id="2_r6d6q"]
[ext_resource type="Texture2D" uid="uid://btoecslt2qk6b" path="res://textures/volume-on.png" id="3_6wm04"]
[ext_resource type="AudioStream" uid="uid://bnah3itumo6cq" path="res://audio/sfx/pop.mp3" id="5_es4n0"]
[ext_resource type="Texture2D" uid="uid://c4i3asq400ejf" path="res://textures/button-32_16.png" id="6_83j8s"]
[ext_resource type="Texture2D" uid="uid://c42gpdcedhsly" path="res://textures/button-64_16.png" id="6_gis3k"]

[sub_resource type="SpriteFrames" id="SpriteFrames_f4mfi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_r6d6q")
}],
"loop": false,
"name": &"false",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6wm04")
}],
"loop": false,
"name": &"true",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_am25x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gjs24"]
resource_name = "close"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_83j8s"]
resource_name = "open"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_am25x"]
_data = {
&"RESET": SubResource("Animation_am25x"),
&"close": SubResource("Animation_gjs24"),
&"open": SubResource("Animation_83j8s")
}

[node name="Settings" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_f4mfi")

[node name="BG" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.5019608)

[node name="Settings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5p8wc")
current_tab = 1
clip_tabs = false

[node name="Audio" type="Control" parent="Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Volume" type="Control" parent="Settings/TabContainer/Audio"]
anchors_preset = 0
offset_left = 11.0
offset_top = 48.0
offset_right = 652.0
offset_bottom = 387.0

[node name="MasterVolume" type="HSlider" parent="Settings/TabContainer/Audio/Volume"]
layout_mode = 0
offset_left = 50.0
offset_top = 88.0
offset_right = 574.0
offset_bottom = 128.0
theme = ExtResource("1_5p8wc")
max_value = 3.0
step = 0.25
value = 1.0

[node name="Text" type="RichTextLabel" parent="Settings/TabContainer/Audio/Volume/MasterVolume"]
clip_contents = false
layout_mode = 0
offset_left = 4.0
offset_top = -47.0
offset_right = 1032.1799
offset_bottom = 107.84268
scale = Vector2(0.4998894, 0.4998894)
mouse_filter = 2
theme = ExtResource("1_5p8wc")
text = "Master"
horizontal_alignment = 1

[node name="SoundVolume" type="HSlider" parent="Settings/TabContainer/Audio/Volume"]
layout_mode = 0
offset_left = 50.0
offset_top = 171.0
offset_right = 574.0
offset_bottom = 211.0
theme = ExtResource("1_5p8wc")
max_value = 3.0
step = 0.25
value = 1.0

[node name="Text" type="RichTextLabel" parent="Settings/TabContainer/Audio/Volume/SoundVolume"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = -47.0
offset_right = 1031.1794
offset_bottom = 107.84268
scale = Vector2(0.4998894, 0.4998894)
mouse_filter = 2
theme = ExtResource("1_5p8wc")
text = "Sound"
horizontal_alignment = 1

[node name="MusicVolume" type="HSlider" parent="Settings/TabContainer/Audio/Volume"]
layout_mode = 0
offset_left = 50.0
offset_top = 252.0
offset_right = 574.0
offset_bottom = 292.0
theme = ExtResource("1_5p8wc")
max_value = 3.0
step = 0.25
value = 1.0

[node name="Text" type="RichTextLabel" parent="Settings/TabContainer/Audio/Volume/MusicVolume"]
clip_contents = false
layout_mode = 0
offset_left = 5.0
offset_top = -47.0
offset_right = 1031.1794
offset_bottom = 107.84268
scale = Vector2(0.4998894, 0.4998894)
mouse_filter = 2
theme = ExtResource("1_5p8wc")
text = "Music"
horizontal_alignment = 1

[node name="VolumeToggle" type="Button" parent="Settings/TabContainer/Audio"]
layout_mode = 0
offset_left = 69.0
offset_top = 376.0
offset_right = 179.0
offset_bottom = 480.0
flat = true

[node name="VolumeIcon" type="AnimatedSprite2D" parent="Settings/TabContainer/Audio/VolumeToggle"]
position = Vector2(57, 48)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_f4mfi")
animation = &"true"

[node name="RichTextLabel" type="RichTextLabel" parent="Settings/TabContainer/Audio"]
clip_contents = false
layout_mode = 0
offset_left = 225.0
offset_top = 396.0
offset_right = 709.0
offset_bottom = 535.2854
scale = Vector2(0.55282176, 0.55282176)
mouse_filter = 2
theme = ExtResource("1_5p8wc")
text = "VOLUME"

[node name="Video" type="Control" parent="Settings/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="SpinBox" type="SpinBox" parent="Settings/TabContainer/Video"]
layout_mode = 0
offset_left = 80.0
offset_top = 108.0
offset_right = 265.0
offset_bottom = 163.0
theme = ExtResource("1_5p8wc")
max_value = 99999.0
alignment = 1

[node name="Text" type="RichTextLabel" parent="Settings/TabContainer/Video/SpinBox"]
clip_contents = false
layout_mode = 0
offset_left = -119.0
offset_top = -44.0
offset_right = 907.17944
offset_bottom = 110.84268
scale = Vector2(0.39750317, 0.39750317)
mouse_filter = 2
theme = ExtResource("1_5p8wc")
text = "max fps"
horizontal_alignment = 1

[node name="Enable Filter" type="CheckBox" parent="Settings/TabContainer/Video"]
layout_mode = 0
offset_left = 83.0
offset_top = 171.0
offset_right = 495.0
offset_bottom = 267.0
scale = Vector2(0.94792646, 0.94792646)
theme = ExtResource("1_5p8wc")
text = " Enable Filters"

[node name="SaveData" type="Control" parent="Settings/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="PopSound" type="AudioStreamPlayer" parent="Settings"]
stream = ExtResource("5_es4n0")
volume_db = -6.148

[node name="Exit" type="Button" parent="Settings"]
layout_mode = 0
offset_left = 1590.9999
offset_top = 885.0
offset_right = 1630.9999
offset_bottom = 909.0
scale = Vector2(8.44, 8.44)
icon = ExtResource("6_83j8s")
flat = true

[node name="Text" type="RichTextLabel" parent="Settings/Exit"]
clip_contents = false
layout_mode = 0
offset_left = -2.2511654
offset_top = 5.9245033
offset_right = 422.77267
offset_bottom = 136.0358
scale = Vector2(0.10746051, 0.10746051)
mouse_filter = 2
theme = ExtResource("1_5p8wc")
text = "EXIT"
horizontal_alignment = 1

[node name="Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 648.0
offset_top = 190.00003
offset_right = -1200.0
offset_bottom = -794.49695
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(8.439527, 8.439527)
theme_override_constants/separation = 0

[node name="Resume" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
icon = ExtResource("6_gis3k")
flat = true

[node name="Text" type="RichTextLabel" parent="Menu/VBoxContainer/Resume"]
clip_contents = false
layout_mode = 0
offset_left = 13.744847
offset_top = 5.9245033
offset_right = 438.76868
offset_bottom = 136.0358
scale = Vector2(0.10746051, 0.10746051)
mouse_filter = 2
theme = ExtResource("1_5p8wc")
text = "resume"
horizontal_alignment = 1

[node name="Settings" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
icon = ExtResource("6_gis3k")
flat = true

[node name="Text" type="RichTextLabel" parent="Menu/VBoxContainer/Settings"]
clip_contents = false
layout_mode = 0
offset_left = 13.744847
offset_top = 5.9245033
offset_right = 438.76868
offset_bottom = 136.0358
scale = Vector2(0.10746051, 0.10746051)
mouse_filter = 2
theme = ExtResource("1_5p8wc")
text = "settings"
horizontal_alignment = 1

[node name="ExitGame" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
icon = ExtResource("6_gis3k")
flat = true

[node name="Text" type="RichTextLabel" parent="Menu/VBoxContainer/ExitGame"]
clip_contents = false
layout_mode = 0
offset_left = 4.147156
offset_top = 5.9245033
offset_right = 599.57166
offset_bottom = 136.0358
scale = Vector2(0.10746051, 0.10746051)
mouse_filter = 2
theme = ExtResource("1_5p8wc")
text = "Exit game"
horizontal_alignment = 1

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_am25x")
}

[connection signal="value_changed" from="Settings/TabContainer/Audio/Volume/MasterVolume" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="Settings/TabContainer/Audio/Volume/SoundVolume" to="." method="_on_sound_volume_value_changed"]
[connection signal="value_changed" from="Settings/TabContainer/Audio/Volume/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="pressed" from="Settings/TabContainer/Audio/VolumeToggle" to="." method="_on_volume_toggle_pressed"]
[connection signal="toggled" from="Settings/TabContainer/Video/Enable Filter" to="." method="_on_enable_filter_toggled"]
[connection signal="pressed" from="Settings/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
